--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             
                                 
                                 <td>
-                                    <a style="color: white;" href="https://mail.google.com/mail/u/0/?ogbl#inbox"><img src="gm.png" alt=""><br>zhryslky1@gmail.com</a>
+                                    <a style="color: white;" href="mailto:zhryslky1@gmail.com"><img src="gm.png" alt=""><br>zhryslky1@gmail.com</a>
                                 </td>
                                 <td>
                                     <a style="color: white;" href="https://www.instagram.com/zehrayslky1?igsh=aWZpOXRteHZ3Mmts"><img src="images-G87bjTj1H-transformed.png" alt=""></a>
